2024-08-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-write-region): Use `lock-file' and
	`unlock-file'..
	(tramp-handle-make-lock-file-name): Use `remote-file-name-inhibit-locks'.
	(tramp-handle-unlock-file): Use `remote-file-name-inhibit-locks'
	and `userlock--handle-unlock-error'.
	(tramp-handle-shell-command): Use `shell-command-buffer-name-async'
	and `shell-command-buffer-name'.
	(tramp-read-passwd): Remove workaround.

	* tramp-adb.el (tramp-adb-handle-process-file):
	Use `process-file-return-signal-string'.

	* tramp-cache.el (tramp-dump-connection-properties):
	Use "lisp-data" for persistency file.

	* tramp-cmds.el (tramp-cleanup-this-connection)
	(tramp-rename-these-files, tramp-recompile-elpa):
	Declare `completion'.

	* tramp-container.el (tramp-kubernetes--container)
	(tramp-kubernetes--pod, tramp-kubernetes--namespace): Make more
	robust.

	* tramp-crypt.el (tramp-crypt-remove-directory):
	Declare `completion'.

	* tramp-gvfs.el (file-notyify-callback): Declare.

	* tramp-sh.el (process-file-return-signal-string)
	(vc-handled-backends): Don't declare.

	* tramp-smb.el (tramp-smb-handle-copy-directory):
	Use `copy-directory-create-symlink'.

2024-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-crypt.el (tramp-crypt-handle-set-visited-file-modtime)
	(tramp-crypt-handle-verify-visited-file-modtime): New defuns.
	(tramp-crypt-file-name-handler-alist): Use them.
	(tramp-crypt-handle-lock-file): Care about `buffer-file-name'.
	(tramp-crypt-handle-unlock-file): Remove compat code.

2024-07-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-repository-branch, tramp-repository-version):
	* tramp-message.el (tramp-repository-branch, tramp-repository-version):
	Declare.

	* trampver.el.in (tramp-repository-branch, tramp-repository-version):
	Remove ;;;###tramp-autoload cookie.

2024-07-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-dissect-file-name, tramp-compute-multi-hops):